<?xml version="1.0"?>
<package format="2">
  <name>abb_irb140_gazebo</name>
  <version>0.0.0</version>
  <description>
    <p>
      The abb_irb140_gazebo package contains the configuration data and launch files required
      to simulate the ABB IRB 140 manipulator in Gazebo. 
    </p>
    <p>
      Before using any of the configuration files included in this package, be
      sure to check they are correct for the particular robot model and
      configuration you intend to use them with.
    </p>
  
  </description>
  
  <author email="fbarbosac@unal.edu.co">Fernando Barbosa (National University of Colombia)</author>
  <maintainer email="fbarbosac@unal.edu.co">Fernando Barbosa (National University of Colombia)</maintainer>
  <license>BSD</license>  

  <!-- <url type="website">http://wiki.ros.org/abb_irb140_gazebo</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>abb_irb140_support</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trayectory_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_controllers</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
