<?xml version="1.0"?>
<package format="2">
  <name>abb_irb140_support</name>
  <version>0.1.0</version>
  <description>
    <p>
      ROS-Industrial support for the ABB IRB 140 (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for ABB IRB 140 manipulators. This includes the base model (140).
    </p>
    <p>
      Joint limits and max joint velocities are based on the information in the
      <a href="https://new.abb.com/products/robotics/industrial-robots/irb-140/irb-140-data">
      ABB IRB 140 technical specification</a> (Version: 3HAC041346-001  Rev:N, Oct 2018).
      All XACROs / URDFs are based on the default motion and joint velocity limits,
      unless noted otherwise (ie: no support for high speed joints,extended 
      / limited motion ranges or other options).
    </p>
    <p>
      Inertial and mass properties were calculated using 3D modelling softwares as SolidWorks and MeshLab, based on the 
      supplied <a href="https://new.abb.com/products/robotics/industrial-robots/irb-140/irb-140-cad">
      ABB IRB 140 CAD model</a>.
    </p> 
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author email="fhmartinezq@unal.edu.co">Freddy Martinez (National University of Colombia)</author>
  <author email="fbarbosac@unal.edu.co">Fernando Barbosa (National University of Colombia)</author>
  <maintainer email="fbarbosac@unal.edu.co">Fernando Barbosa (National University of Colombia)</maintainer>
  <license>BSD</license>
  
  <!-- <url type="website">http://wiki.ros.org/abb_irb140_support</url> -->
  <!-- <url type="bugtracker">https://github.com/ros-industrial/abb_experimental/issues</url> -->
  <!-- <url type="repository">https://github.com/ros-industrial/abb_experimental</url> -->

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend version_gte="1.9.55">roslaunch</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend> 
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend> 
  <exec_depend>abb_driver</exec_depend>
  <exec_depend>abb_resources</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  
  <export>
    <!-- Other tools can request additional information be placed here -->
    <architecture_independent/>
  </export>
</package>